# two-tower-uplift-oss

./: .gitignore  LICENSE  README.md  pyproject.toml
databricks/: tt_uplift_benchmark.py
demos/: README.md  _common.py  alpha_pareto.py  baseline_comparison.py  confounding_balance.py  device_level_fails.py  distillation_vs_aggregation.py
docs/: DGP.md
src/tt_uplift/: __init__.py  aggregation.py  cevae.py  dgp.py  diagnostics.py  evaluation.py  features.py  losses.py  model.py  trainer.py
tests/: test_baselines.py  test_dgp.py  test_pipeline.py
