[project]
name = "tt-uplift"
version = "0.1.0"
description = "Two-tower session-to-device uplift distillation: reproducibility artifact for the KDD ADS paper on deployment-level policy learning from session-level counterfactual supervision."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "Yan Zheng" }]
keywords = [
    "uplift-modeling",
    "causal-inference",
    "two-tower",
    "distillation",
    "granularity-mismatch",
]
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
tt-demo-confounding = "demos.confounding_balance:main"
tt-demo-device-fails = "demos.device_level_fails:main"
tt-demo-distill = "demos.distillation_vs_aggregation:main"
tt-demo-pareto = "demos.alpha_pareto:main"
tt-demo-baselines = "demos.baseline_comparison:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tt_uplift", "demos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
